--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Style Variables
+
+// Font Imports
+@import (css) url('https://fonts.googleapis.com/css?family=Montserrat');
+
+body {
+    height: 100%;
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
