Began work on basic hamburger nav component

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,4 @@
+<div id="hamburger" (click)="toggleNavigation($event)" [class.active]="expanded"><span></span></div>
 <nav>
     <ul>
         <li><a routerLink="/signup">Sign Up</a></li>
