--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -1,11 +1,11 @@
 <header>
     <div class="left-container">
-            <span id="logo">{{ logo.title }}<sub> {{ logo.subTitle }}</sub></span>
+            <h1 id="logo">{{ logo.title }}<sub>{{ logo.subTitle }}</sub></h1>
     </div>
 
     <div class="right-container">
         <div id="links">
-            <!-- TODO loop through object array of links -->
+            <!-- TODO loop through object array of contact links -->
         </div>
     </div>
 </header>
