--- a/src/app/topbar/topbar.component.less
+++ b/src/app/topbar/topbar.component.less
@@ -36,7 +36,8 @@
                 sub {
 
                     vertical-align: baseline;
-
+                    margin-left: 4px;
+                    
                     font-size: 12px;
                     font-weight: 500;
                 }
