Finished base implementation of hamburger nav, want to make more dynamic

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,6 +8,8 @@
     padding-top: 55px;
     padding-left: 60px;
 
+    transition: padding-left 0.4s 0s ease;
+
     &.navExpanded {
         padding-left: 200px; 
     }
