--- a/src/app/nav/nav.component.less
+++ b/src/app/nav/nav.component.less
@@ -1,7 +1,10 @@
 @import (less) '../../lessToolkit/_hamburger.less';
 
 // Temp styling variables, will most likely move to global styling scope
-@navbarBgColor: #1d1d1d;
+
+@navbarBgColor: #3c3c3c;
+@navbarActiveElementBgColor: #545454;
+
 
 :host {
 
@@ -16,19 +19,58 @@
     overflow: hidden;
     background: @navbarBgColor;
 
+    transition: width 0.4s 0s ease;
+
 
     div#hamburger {
         @params: {
-            width: 26px;
+            width: 24px;
             height: 40px;
             barHeight: 1px;
-            barSpacing: 0.6em;
+            barSpacing: 0.5em;
 
             background: none;
             color: white;
         };
         #ui-elements#hamburger.create(@params);
-        margin: 20px 16px;
+        margin: 20px 18px;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+
+        li {
+            
+            cursor: pointer;
+            
+            display: flex;
+            align-items: center;
+
+            width: 200px;
+            height: 50px;
+            margin: 8px 0;
+
+            outline: none;
+
+            color: white;
+            
+            #icon {
+                display: inline-block;
+                width: 30px;
+                height: 20px;
+                margin: 0 15px;
+            }
+
+            #text{
+                font-family: 'Open Sans', sans-serif;
+                font-size: 12px;
+                font-weight: 400;
+            }
+            &.active {
+                background: @navbarActiveElementBgColor;
+            }
+        }
     }
 }
 
