Completed basic reactive form with email validation

--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="left-container">
-            <h1 id="logo">{{ logo.title }}<sub>{{ logo.subTitle }}</sub></h1>
+            <h1 id="logo" class="mb-0">{{ logo.title }}<sub>{{ logo.subTitle }}</sub></h1>
     </div>
 
     <div class="right-container">
