--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,3 +1,15 @@
-<p>
-  Sign Up Component
-</p>
+<form [formGroup]="emailForm" (ngSubmit)="submitHandler()">
+    <!-- Value: {{ emailForm.value | json }} -->
+
+    <h1 class="h1 mb-5 font-weight-normal">Join our Mailing List!</h1>
+
+    <label for="email" class="sr-only">Email address</label>
+    <input type="email" id="email" class="form-control" formControlName="email" placeholder="Email Address" spellcheck="false"/>
+
+    <div *ngIf="email.invalid && (email.dirty || email.touched)" class="mt-3 alert alert-danger">
+        Invalid email address.
+    </div>
+
+    
+    <button type="submit" class="btn btn-lg btn-primary mt-3 float-right" [disabled]="emailForm.invalid">Sign up</button>
+</form>
