Improved styling of confirmation screen

--- a/src/app/pages/confirm/confirm.component.html
+++ b/src/app/pages/confirm/confirm.component.html
@@ -1,3 +1,4 @@
-<p>
-  confirm works!
-</p>
+<div class="container">
+    <h1 class="h1 mb-5 font-weight-normal">Confirmation :)</h1>
+    <h2 class="h4 font-weight-normal">Thank you for joining our mailing list!</h2>
+</div>
