Minor responsive styling changes

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -13,5 +13,9 @@
 
     &.navExpanded {
         padding-left: 200px; 
+
+        @media only screen and (max-width: 1024px) {
+            padding-left: 60px;
+        }
     }
 }
