--- a/src/app/pages/confirm/confirm.component.less
+++ b/src/app/pages/confirm/confirm.component.less
@@ -6,13 +6,16 @@
     position: relative;
 
     height: 100%;
+    width: 100%;
 
     .container {
         margin: 0 auto;
         text-align: center;
 
+        max-width: 1000px;
+
         h1 {
-            font-size: 60px;
+            font-size: 40px;
         }
     }
 }
