--- a/src/app/topbar/topbar.component.less
+++ b/src/app/topbar/topbar.component.less
@@ -5,11 +5,11 @@
 
 :host {
 
-    z-index: 99;
+    z-index: 999;
     position: fixed;
     top: 0;
 
-    width: 100vw;
+    width: 100%;
     height: @topbarHeight;
 
     header {
